Updated Controller and Screens
Batch Feedback, Batch Individual feedback,  Edit Batch Details, Evaluation, Fees Record, Assignment, Progress Tracking, Front Screen.

--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchFeedbackScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchFeedbackScreen.fxml
@@ -120,7 +120,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <Button fx:id="individualFeedback" mnemonicParsing="false" onAction="#getIndividualFeedback" prefHeight="50.0" prefWidth="200.0" text="Individual Feedback" />
+                  <Button fx:id="individualFeedback" mnemonicParsing="false" onAction="#sendToIndividualFeedback" prefHeight="50.0" prefWidth="200.0" text="Individual Feedback" />
                </children>
             </HBox>
          </children>
