Implemented Data Transfer
Implemented ArrayList to transfer data between screens.

--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
@@ -80,7 +80,7 @@
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </padding>
                            <children>
-                              <Button fx:id="courseID" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID1" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -91,7 +91,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="70.0" layoutY="48.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID2" alignment="CENTER" layoutX="70.0" layoutY="48.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -102,7 +102,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="33.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID3" alignment="CENTER" layoutX="33.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -113,7 +113,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="480.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 4" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID4" alignment="CENTER" layoutX="480.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 4" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -124,7 +124,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="705.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 5" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID5" alignment="CENTER" layoutX="705.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 5" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -135,7 +135,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="30.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID6" alignment="CENTER" layoutX="30.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -146,7 +146,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="255.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID7" alignment="CENTER" layoutX="255.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
@@ -157,7 +157,7 @@
                                     <Font name="Calibri Bold Italic" size="34.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="courseID" alignment="CENTER" layoutX="480.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+                              <Button fx:id="courseID8" alignment="CENTER" layoutX="480.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                                  <GridPane.margin>
                                     <Insets />
                                  </GridPane.margin>
