--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchIndividualFeedbackScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchIndividualFeedbackScreen.fxml
@@ -56,20 +56,20 @@
    <center>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
+          <AnchorPane minHeight="0.0" minWidth="300.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
                <children>
                   <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="615.0" prefWidth="292.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
-                      <AnchorPane>
+                      <AnchorPane prefHeight="945.0" prefWidth="1800.0">
                            <children>
-                              <TableView fx:id="individualFeedbackTable" prefHeight="592.0" prefWidth="452.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="individualFeedbackTable" prefHeight="945.0" prefWidth="1500.0">
                                 <columns>
-                                  <TableColumn fx:id="individualFeedbackTableNameColumn" minWidth="150.0" prefWidth="100.0" text="Name" />
-                                  <TableColumn fx:id="individualFeedbackTableInstructorColumn" minWidth="150.0" prefWidth="100.0" text="Instructor" />
-                                    <TableColumn fx:id="individualFeedbackTableDuration" minWidth="70.0" prefWidth="100.0" text="Duration" />
-                                    <TableColumn fx:id="individualFeedbackTableEmailId" minWidth="150.0" prefWidth="100.0" text="Email ID" />
-                                    <TableColumn fx:id="individualFeedbackTableMobile" minWidth="100.0" prefWidth="100.0" text="Mobile" />
-                                    <TableColumn fx:id="individualFeedbackTableStatus" minWidth="70.0" prefWidth="100.0" text="Status" />
+                                  <TableColumn fx:id="individualFeedbackTableNameColumn" minWidth="-1.0" prefWidth="200.0" text="Name" />
+                                  <TableColumn fx:id="individualFeedbackTableInstructorColumn" minWidth="-1.0" prefWidth="200.0" text="Instructor" />
+                                    <TableColumn fx:id="individualFeedbackTableDuration" minWidth="-1.0" prefWidth="200.0" text="Duration" />
+                                    <TableColumn fx:id="individualFeedbackTableEmailId" minWidth="-1.0" prefWidth="200.0" text="Email ID" />
+                                    <TableColumn fx:id="individualFeedbackTableMobile" minWidth="-1.0" prefWidth="200.0" text="Mobile" />
+                                    <TableColumn fx:id="individualFeedbackTableStatus" minWidth="-1.0" prefWidth="200.0" text="Status" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -84,7 +84,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
+          <AnchorPane minHeight="0.0" minWidth="400.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
                <children>
                   <VBox prefHeight="615.0" prefWidth="692.0" spacing="5.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
