--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchDetails.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchDetails.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,35 +15,6 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchScheduler.fxmlsControllers.BatchDetailsController">
-   <center>
-      <ScrollPane BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="25.0" right="25.0" />
-         </BorderPane.margin>
-         <content>
-            <AnchorPane>
-               <children>
-                  <TreeTableView prefHeight="750.0" prefWidth="1230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                        <TreeTableColumn prefWidth="75.0" text="Batch ID" />
-                        <TreeTableColumn prefWidth="75.0" text="Course ID" />
-                        <TreeTableColumn prefWidth="75.0" text="Faculty" />
-                      <TreeTableColumn prefWidth="75.0" text="Time" />
-                      <TreeTableColumn prefWidth="75.0" text="Begin Date" />
-                        <TreeTableColumn prefWidth="75.0" text="End Date" />
-                        <TreeTableColumn prefWidth="75.0" text="Created By" />
-                        <TreeTableColumn prefWidth="75.0" text="Create Date" />
-                        <TreeTableColumn prefWidth="75.0" text="Add Student" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TreeTableView>
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
-   </center>
    <bottom>
       <HBox prefHeight="75.0" prefWidth="600.0" style="-fx-background-color: navy blue;" BorderPane.alignment="CENTER">
          <padding>
@@ -71,7 +42,7 @@
                   <Font size="25.0" />
                </font>
             </Label>
-            <Region prefHeight="75.0" prefWidth="226.0" HBox.hgrow="ALWAYS" />
+            <Region prefHeight="85.0" prefWidth="289.0" HBox.hgrow="ALWAYS" />
             <ImageView fx:id="logo" fitHeight="75.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                <image>
                   <Image url="@../../../../../Downloads/WhatsApp%20Image%202020-06-16%20at%2011.30.44%20PM.jpeg" />
@@ -83,4 +54,30 @@
          </children>
       </HBox>
    </top>
+   <center>
+      <ScrollPane>
+         <content>
+            <AnchorPane>
+               <children>
+                  <TableView fx:id="batchDetails" prefHeight="750.0" prefWidth="1230.0">
+                    <columns>
+                      <TableColumn fx:id="batchId" prefWidth="136.0" text="Batch ID" />
+                      <TableColumn fx:id="courseId" prefWidth="136.0" text="Course ID" />
+                        <TableColumn fx:id="faculty" prefWidth="136.0" text="Faculty" />
+                        <TableColumn fx:id="time" prefWidth="136.0" text="Time" />
+                        <TableColumn fx:id="beginDate" prefWidth="136.0" text="Begin Date" />
+                        <TableColumn fx:id="endDate" prefWidth="136.0" text="End Date" />
+                        <TableColumn fx:id="createdBy" prefWidth="136.0" text="Created by" />
+                        <TableColumn fx:id="createDate" prefWidth="136.0" text="Created Date" />
+                        <TableColumn fx:id="addStudent" minWidth="4.0" prefWidth="141.0" text="Add Student" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </content>
+         <BorderPane.margin>
+            <Insets left="25.0" right="25.0" />
+         </BorderPane.margin>
+      </ScrollPane>
+   </center>
 </BorderPane>
