--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
@@ -75,7 +75,7 @@
    <center>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
+          <AnchorPane minWidth="300.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
                <children>
                   <GridPane layoutX="79.0" layoutY="101.0" prefHeight="343.0" prefWidth="293.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
@@ -111,7 +111,7 @@
                               <Font name="Calibri Bold" size="18.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="feeUniqueId" prefHeight="31.0" prefWidth="120.0" GridPane.columnIndex="1" />
+                        <TextField fx:id="feeUniqueId" GridPane.columnIndex="1" />
                         <TextField fx:id="feeName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <TextField fx:id="feeEmailID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <TextField fx:id="feeMobileNumber" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -134,7 +134,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </AnchorPane>
-          <AnchorPane minHeight="50.0" minWidth="10.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
+          <AnchorPane minHeight="50.0" minWidth="400.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: purple;">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
@@ -145,18 +145,24 @@
                           <content>
                             <AnchorPane prefHeight="1000.0">
                                  <children>
-                                    <TableView fx:id="feeTable" layoutX="-2.0" prefHeight="945.0" prefWidth="1864.0">
+                                    <TableView fx:id="feeTable" layoutX="-2.0" prefHeight="945.0" prefWidth="2600.0">
                                       <columns>
-                                        <TableColumn fx:id="feeTableNameColumn" editable="false" minWidth="120.0" prefWidth="150.0" text="Name" />
-                                        <TableColumn fx:id="feeTableFeeStatusColumn" editable="false" minWidth="120.0" prefWidth="150.0" text="Fee Status" />
-                                          <TableColumn fx:id="feeTablePaymentModeColumn" editable="false" minWidth="120.0" prefWidth="150.0" text="Payment Mode" />
-                                          <TableColumn fx:id="feeTableInstallment1Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Install 1" />
-                                          <TableColumn fx:id="feeTableDueDate1Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Due Date 1" />
-                                          <TableColumn fx:id="feeTableInstallment2Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Install 2" />
-                                          <TableColumn fx:id="feeTableDueDate2Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Due Date 2" />
-                                          <TableColumn fx:id="feeTableInstallment3Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Install 3" />
-                                          <TableColumn fx:id="feeTableDueDate3Column" editable="false" minWidth="120.0" prefWidth="150.0" text="Due Date 3" />
-                                          <TableColumn fx:id="feeTableDueAmountColumn" editable="false" minWidth="120.0" prefWidth="150.0" text="Due Amount" />
+                                        <TableColumn fx:id="feeTableNameColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Name" />
+                                        <TableColumn fx:id="feeTableFeeStatusColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Fee Status" />
+                                          <TableColumn fx:id="feeTablePaymentModeColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Mode" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment1Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 1" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment1DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 1 Date" />
+                                          <TableColumn fx:id="feeTableActualInstallment1Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 1" />
+                                          <TableColumn fx:id="feeTableActualInstallment1DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 1" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment2Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 2" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment2DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 2 Date" />
+                                          <TableColumn fx:id="feeTableActualInstallment2Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 2" />
+                                          <TableColumn fx:id="feeTableActualInstallment2DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 2" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment3Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 3" />
+                                          <TableColumn fx:id="feeTablePlannedInstallment3DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 3 Date" />
+                                          <TableColumn fx:id="feeTableActualInstallment3Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 3" />
+                                          <TableColumn fx:id="feeTableActualInstallment3DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 3" />
+                                          <TableColumn fx:id="feeTableDueAmountColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Due Amount" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
